--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,4 +21,5 @@ jobs:
         script: |
           cd ${{ secrets.PATH }}
           git pull origin main
+          git pull origin main
           wall "github auto-puller" jobs done
